--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
+        "http-status-codes": "^2.3.0",
         "joi": "^17.13.3",
         "mongoose": "^8.8.1",
         "zod": "^3.23.8"
@@ -30,7 +31,7 @@
         "@types/cors": "^2.8.17",
         "@types/eslint__js": "^8.42.3",
         "@types/express": "^5.0.0",
-        "@types/node": "^22.9.0",
+        "@types/node": "^22.10.1",
         "@types/validator": "^13.12.2",
         "@typescript-eslint/eslint-plugin": "^8.14.0",
         "@typescript-eslint/parser": "^8.14.0",
