--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,7 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "tabWidth": 4,
-  "trailingComma": "none",
-  "bracketSameLine": true,
-  "arrowParens": "avoid"
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 4,
+    "trailingComma": "none",
+    "bracketSameLine": true
 }
